# backend

./: .dockerignore  .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gunicorn_conf.py  main.py  pyproject.toml  pytest.xml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 1fb4a8c91cfa_remove_user_profile_fields.py  43fe4a9d465b_drop_submission_table.py  4bb25466d8f1_add_exam_question_and_material_ingest.py  596a8c94b762_add_organization_and_sis_user_fields.py  693ae09dc797_remove_oauth_fields_from_user.py  6f0d9c4b7a21_convert_native_enums_to_varchar.py  747f67b6ea68_add_exam_week_column.py  8d8a4c4b2d9e_add_organization_and_sis_user_fields.py  90bbf2f8d613_add_submission_domain.py  98f0d64f3f11_add_exam_domain.py  a1b2c3d4e5f7_backfill_multiple_choice_correct_answer_text.py  a2d651fa6123_add_classroom_domain.py  a8b3c7d9e1f2_add_exam_question_merged_fields.py  a9c2d4e6f8b0_add_exam_question_count_and_difficulty.py  ab12cd34ef56_generalize_classroom_material_source_contract.py  b4d6e8f0a1c2_expand_exam_question_merged_field_lengths.py  b7d5e6a1c2f4_rename_quiz_to_weekly_add_project_exam_type.py  c1a2b3d4e5f6_replace_allow_retake_with_max_attempts.py  c9e1f7a2b3d4_add_exam_result_evaluation_persistence.py  ced00c92f824_refine_classroom_model.py  d4e5f6a7b8c9_add_exam_session_attempt_constraints.py  d7e8f9a0b1c2_make_legacy_exam_question_fields_nullable.py  daf876d85767_add_classroom_materials.py  e1ceb3bffcd2_create_initial_tables.py  e1f2a3b4c5d6_add_exam_question_type.py  e3f4a5b6c7d8_add_exam_question_max_score.py  e6f7a8b9c0d1_add_exam_max_follow_ups.py  f2a4c6d8e0b1_add_async_job_and_exam_generation_state.py  f4b7c2d1a9e3_add_exam_question_answer_fields.py  (+2 more)
app/: container.py  server.py
app/async_job/: container.py
core/: config.py
docs/: architecture.md  authentication.md  creating-a-domain.md
(+290 files in other folders)
