[project]
name = "dialearn-backend"
version = "0.1.0"
description = "Backend for Dialearn, a conversational AI learning competency assessment platform"
requires-python = ">=3.13"
authors = [
    {name = "Boilerplate Maintainers", email = "maintainers@example.com"}
]

dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.40.59",
    "dependency-injector>=4.0.0",
    "fastapi[standard]>=0.135.1",
    "greenlet>=3.3.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "openai>=2.6.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-sdk>=1.40.0",
    "orjson>=3.11.7",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.1.1",
    "pydantic[email]>=2.0.0",
    "pyjwt>=2.12.0",
    "qdrant-client>=1.15.1",
    "sqlalchemy>=2.0.48",
    "stamina>=25.2.0",
    "uuid-utils>=0.14.1",
    "uvicorn>=0.42.0",
    "valkey>=6.1.1",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py314"
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
preview = true
